--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.5.0",
+    "@langchain/community": "^0.3.14",
+    "@langchain/core": "^0.3.18",
+    "ai": "^3.4.33",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.5",
     "next": "15.0.3",
     "openai": "^4.72.0",
+    "puppeteer": "^23.8.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "ts-node": "^10.9.2"
